Ester: Nou enllaç Paypal, modificat enllaços entitats amigues i numero de telefon marcable quan es visualitza amb smartphone

--- a/adopta.html
+++ b/adopta.html
@@ -62,7 +62,7 @@
 	    <div id="navbar" class="navbar-collapse collapse">
 	      <ul class="nav navbar-nav">
 	        <li><a href="adopta.html">Adopta!</a></li>
-	        <li><a href="on-som.html">On som?</a></li>
+	        <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58">On som?</a></li>
 	        <li><a href="voluntaris.html">Voluntaris</a></li>
 
 	      </ul>
@@ -90,18 +90,15 @@
 
 			<div class="blog-post expanded-article">
 			  <h1 class="blog-post-title">Adoptar</h1>
-
-				<p><strong>Des d'aquí fem una crida a la importància de l'adopció.</strong> Penseu que si adopteu un gos, no només li esteu donant amb ell una nova vida, sinó que també ajudeu a la resta de gossos que es queden a la gàbia a tenir una mica més d'espai vital, fet nolt important dabant l'augment dels abandonaments. Volem animar-vos doncs, a que ens vingueu a veure, no podrem superar aquesta crisi sense la vostra ajuda!</p>
-				<p>Per adoptar una mascota és imprescindible la visita del futur propietari a les nostres instal·lacions per tal de realitzar la reserva. Per a nosaltres és molt important que la persona que cuidarà el gat o gos vingui personalment a conèixer-lo, no es realitzen reserves per telèfon o per correu electrònic.</p>
-				<p>Recordeu que per a endur-vos la vostra mascota necessitareu un collaret, una corretja i/o un "transportín"!
-				Un cop realitzada la reserva, el nostre veterinari realitza una revisió per tal de garantir la bona salut del gos. Tots els gossos es donen desparassitats, vacunats, esterilitzats, amb microxip i se'ls fa la prova de la lehismaniosi. Aquestes despeses tenen un cost 140 € per a l'adoptant.</p>
-
-				<img src="images/dues-nenes-adoptant-cadells.jpg" class="img-responsive expanded-article" alt="dues nenes adoptant cadells">
-
-				<p>La Protectora té especial cura en donar els cadells en adopció en les millors condicions possibles. Per aquest motiu el propietari adoptarà el cadell quan tingui, les vacunes administrades.</p>
-				<p>Els futurs propietaris poden realitzar la reserva del cadell tant bon punt arriba a les nostres instal·lacions. Nosaltres els informarem del calendari de vacunacions i de quan el cadell estarà en òptimes condicions per viure la resta de la seva vida a la llar dels propietaris.</p>
-				<p>Tots els cadells es donen desparassitats, amb les vacunes de parvovirosis i trivalent i amb el microxip. Això suposa un cost per al propietari de 90€.</p>
-				<p>Els gats es donen en adopció quan estan desparassitats, amb l'analítica de sang realitzada i, opcionalment, esterilitzats. Les despeses d'adopció varíen segons les condicions concretes de l'animal. L'adoptant haurà de portar un mitjà tancat per a transportar el gat ("transportín").</p>
+			  <p><strong>Des d'aquí fem una crida a la importància de l'adopció.</strong> Penseu que si adopteu un gos, no només li esteu donant a ell una nova vida, sinó que també ajudeu a la resta de gossos que es queden a la gàbia a tenir una mica més d'espai vital, fet molt important davant l'augment dels abandonaments. Volem animar-vos doncs, a que ens vingueu a veure, no podrem superar aquesta crisi sense la vostra ajuda!</p>
+			  <p>Per adoptar una mascota és imprescindible la visita del futur propietari a les nostres instal·lacions per tal de realitzar la reserva. Per a nosaltres és molt important que la persona que cuidarà el gat o gos vingui personalment a conèixer-lo, no es realitzen reserves per telèfon o per correu electrònic.</p>
+			  <p>Recordeu que per a endur-vos la vostra mascota necessitareu un collaret, una corretja i/o un "transportín"!
+			    Un cop realitzada la reserva, el nostre veterinari realitza una revisió per tal de garantir la bona salut del gos. Tots els gossos es donen desparassitats, vacunats, esterilitzats, amb microxip i se'ls fa la prova de la lehismaniosi. Aquestes despeses tenen un cost per a l'adoptant.</p>
+			  <img src="images/dues-nenes-adoptant-cadells.jpg" class="img-responsive expanded-article" alt="dues nenes adoptant cadells">
+			  <p>La Protectora té especial cura en donar els cadells en adopció en les millors condicions possibles. Per aquest motiu el propietari adoptarà el cadell quan tingui les vacunes administrades.</p>
+			  <p>Els futurs propietaris poden realitzar la reserva del cadell tant bon punt arriba a les nostres instal·lacions. Nosaltres els informarem del calendari de vacunacions i de quan el cadell estarà en òptimes condicions per a viure la resta de la seva vida a la llar dels propietaris.</p>
+			  <p>Tots els cadells es donen desparassitats, amb les vacunes de parvovirosis i trivalent i amb el microxip. El cost de les despeses també és assumit per l'adoptant.</p>
+			  <p>Els gats es donen en adopció quan estan desparassitats, amb l'analítica de sang realitzada i, opcionalment, esterilitzats. Les despeses d'adopció varíen segons les condicions concretes de l'animal. L'adoptant haurà de portar un mitjà tancat per a transportar el gat ("transportín").</p>
 
 				<img src="images/nena-adoptant-gat-petit.jpg" class="img-responsive expanded-article" alt="nena feliç adoptant gat petit" width="400px">
 
@@ -143,9 +140,14 @@
 			      <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58" rel="external"><img class="icon" src="images/Google-Maps-icon.png">Mapa</a></li>
 			      <li><a href="https://www.facebook.com/protectoratarragona/" rel="external"><img class="icon" src="images/Facebook.png">Facebook</a></li>
 			      <li><a href="mailto:laprotectora@gmail.com" rel="external"><img class="icon" src="images/Gmail-icon.png">Correu Electronic</a></li>
-			      <li><a href="#" rel="external"><img class="icon" src="images/phone.png">(+34) 653 073 713</a></li>
-			      <li><a href="#" rel="external"><img class="icon" src="images/Whatsapp.png">WhatsApp</a></li>
-			      <li><a href="#" rel="external"><img class="icon" src="images/Paypal.png">Paypal</a></li>
+			      <li><a href="tel:653 073 713" rel="external"><img class="icon" src="images/phone.png">(+34) 653 073 713</a></li>
+			      <li><a rel="external">
+			      	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="Y9L68BC39DRQL">
+								<input type="image" class="icon" src="images/Paypal.png" border="0" name="submit" alt="PayPal">PayPal
+							</form>
+							</a>
 			      <li><a href="https://www.teaming.net/teamingdelaprotectoradetarragona" rel="external"><img class="icon" src="images/piggy-bank-icon.png">Teaming.net</a></li>
 			    </ul>
 			</article></div>
@@ -154,12 +156,11 @@
 			    <h2>Entitats amigues:</h2>
 			    <ul class="list">
 			      <li><a href="http://www.faada.org/" rel="external">FAADA</a></li>
-			      <li><a href="http://www.protectoramataro.org/" rel="external">Refugi de Mataro</a></li>
-			      <li><a href="http://www.adiestramientocaninotarragona.com/" rel="external">Adistramiento Canino Tarragona</a></li>
-			      <li><a href="http://www.mimiga.es/es/acerca-de/proteccion-animal/" rel="external">MiMiga</a></li>
-			      <li><a href="http://www.centros-peluquerias.es/can-brutus/" rel="external">Can Brutus</a></li>
-			      <li><a href="#" rel="external">Servei de Veterinària Coselva</a></li>
+			      <li><a href="http://www.tierheim-tarragona.de/Tierheim_Tarragona/Willkommen.html" rel="external">Tierheim Tarragona</a></li>
 			      <li><a href="http://www.bofarullveterinaris.com/" rel="external">Clínica Veterinària Bofarull Veterinaris</a></li>
+			      <li><a href="http://wecandog.com/" rel="external">WeCan Educación en Positivo</a></li>
+			      <li><a href="http://tresky.es/" rel="external">Tresky Peluqueria Canina</a></li>
+			      <li><a href="http://www.viajes4patas.com/" rel="external">Viajes a 4 Patas</a></li>
 			     	<li><a href="http://www.gencat.cat" rel="external">Generalitat de Catalunya</a></li>
 						<li><a href="http://www.diputaciodetarragona.cat/" rel="external">Diputació de Tarragona</a></li>
 						<li><a href="http://www.tarragona.cat/" rel="external">Ajuntament de Tarragona</a></li>
@@ -197,7 +198,7 @@ eMail:  laprotectora@gmail.com
 Carrer Sofre, s/n
 Polígon Industrial Riu Clar
 Tarragona</pre>
-		<a href="http://laprotectora.org/documents/avislegalweb.pdf">Avís legal Protecció de Dades.</a>
+		<a href="documents/avislegalweb.pdf">Avís legal Protecció de Dades.</a>
 		<p>© Associació Protectora d'Animals i plantes de Tarragona 2011</p>
   </div>
 </footer>
