Updated lateral facebook posts

--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
 			    </ul>
 			</article></div>
 			<div id="links-collection" class="sidebar-module sidebar-module-inset language-cat"><article>
-			    <br>
 			    <h2>Entitats amigues:</h2>
 			    <ul class="list">
 			      <li><a href="http://www.faada.org/" rel="external">FAADA</a></li>
@@ -208,13 +207,21 @@
 
 			<div class="sidebar-module sidebar-module-inset facebook-post">
 				<article>
-					<img src="images/facebook-banner-1.png" width="300px">
+					<h2>facebook.com</h2>
 				</article>
 			</div>
 
 			<div class="sidebar-module sidebar-module-inset facebook-post">
 				<article>
-					<img src="images/facebook-banner-2.png" width="300px">
+					<!-- <img src="images/facebook-banner-1.png" width="300px"> -->
+					<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fprotectoratarragona%2Fposts%2F10154387264756334%3A0&width=500" width="250" height="447" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+				</article>
+			</div>
+
+			<div class="sidebar-module sidebar-module-inset facebook-post">
+				<article>
+					<!-- <img src="images/facebook-banner-2.png" width="300px"> -->
+					<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fprotectoratarragona%2Fposts%2F10154299468986334&width=500" width="250" height="709" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</article>
 			</div>
 
