Added old youtube video on the main page

--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
 				</a>
       </div><!-- /.blog-post -->
 
+			<br>
+			<div class="video-container">
+				<iframe src="https://www.youtube.com/embed/ptpI_Le27qg" frameborder="0" allowfullscreen></iframe>
+			</div>
+
     </div><!-- /.blog-main -->
 
 
