Remove a couple of BR

--- a/adopta.html
+++ b/adopta.html
@@ -81,7 +81,7 @@
 
       <div class="blog-header">
         <h1 class="blog-title"></h1>
-        <p class="lead blog-description"><br><br><br></p>
+        <p class="lead blog-description"><br></p>
       </div>
 
 	<div class="row">
