Updated PayPal button using form button to make the text clickable

--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
 	        <li><a href="adopta.html">Adopta!</a></li>
 	        <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58">On som?</a></li>
 	        <li><a href="voluntaris.html">Voluntaris</a></li>
-
+					<li>
+			      	<a rel="external">
+			      	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
+								<input type="hidden" name="cmd" value="_s-xclick">
+								<input type="hidden" name="hosted_button_id" value="Y9L68BC39DRQL">
+								<button type="submit" form="paypal" value="submit" class="paypal-button-navbar">
+								Donatiu
+								</button>
+							</form>
+							</a>
+					</li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-Catalonia.png"></a></li>
@@ -184,11 +194,15 @@
 			      <li><a href="https://www.facebook.com/protectoratarragona/" rel="external"><img class="icon" src="images/Facebook.png">Facebook</a></li>
 			      <li><a href="mailto:laprotectora@gmail.com" rel="external"><img class="icon" src="images/Gmail-icon.png">Correu Electronic</a></li>
 			      <li><a href="tel:653 073 713" rel="external"><img class="icon" src="images/phone.png">(+34) 653 073 713</a></li>
-			      <li><a rel="external">
-			      	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+						<li>
+						<a rel="external">
+						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="Y9L68BC39DRQL">
-								<input type="image" class="icon" src="images/Paypal.png" border="0" name="submit" alt="PayPal">PayPal
+								<button type="submit" form="paypal" value="submit" class="paypal-button-lateral">
+								<img src="images/Paypal.png" class="icon" border="0" alt="PayPal">
+								Donatiu amb PayPal
+								</button>
 							</form>
 							</a>
 						</li>
