--- a/adopta.html
+++ b/adopta.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<title>La Protectora d'animals de Tarragona</title>
+	<title>La Protectora d'Animals de Tarragona</title>
 
 	<!--
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
@@ -49,13 +49,13 @@
 
 	      <a href="index.html"><div id="text-logo" class="navbar-brand">laprotectora.org</div></a>
 
-	       <button type="button" class="navbar-toggle collapsed">
+	       <button type="button" onclick="location.href='index.html'" class="navbar-toggle collapsed">
 	       	<img class="flag" src="images/Flag-Icon-Catalonia.png">
 	       </button>
-	       <button type="button" class="navbar-toggle collapsed">
+	       <button type="button" onclick="location.href='index-es.html'" class="navbar-toggle collapsed">
 	       	<img class="flag" src="images/Flag-Icon-Spain.png">
 	       </button>
-	       <button type="button" class="navbar-toggle collapsed">
+	       <button type="button" onclick="location.href='index-en.html'" class="navbar-toggle collapsed">
 	       	<img class="flag" src="images/Flag-Icon-United-KingdomGreat-Britain.png">
 	       </button>
 	    </div>
@@ -65,8 +65,8 @@
 	        <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58">On som?</a></li>
 	        <li><a href="voluntaris.html">Voluntaris</a></li>
 					<li>
-			      	<a rel="external">
-			      	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
+						<a rel="external">
+						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="Y9L68BC39DRQL">
 								<button type="submit" form="paypal" value="submit" class="paypal-button-navbar">
@@ -77,10 +77,10 @@
 					</li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-Catalonia.png"></a></li>
-	        <li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-Spain.png"></a></li>
-	       	<li class="flag"><a href="../navbar/"><img class="flag" src="images/Flag-Icon-United-KingdomGreat-Britain.png"></a></li>
-	        <li><a href=contacte.html>Contacta<span class="sr-only">(current)</span></a></li>
+	        <li class="flag-collapsed"><a href="index.html"><img class="flag-collapsed" src="images/Flag-Icon-Catalonia.png"></a></li>
+	        <li class="flag-collapsed"><a href="index-es.html"><img class="flag-collapsed" src="images/Flag-Icon-Spain.png"></a></li>
+	       	<li class="flag-collapsed"><a href="index-en.html"><img class="flag-collapsed" src="images/Flag-Icon-United-KingdomGreat-Britain.png"></a></li>
+	        <li><a href="contacte.html">Contacta<span class="sr-only">(current)</span></a></li>
 	      </ul>
 	    </div><!--/.nav-collapse -->
 	  </div>
@@ -222,7 +222,7 @@ Polígon Industrial Riu Clar
 Tarragona</pre>
 		<a href="documents/avislegalweb.pdf">Avís legal Protecció de Dades.</a>
 		<p>© Associació Protectora d'Animals i plantes de Tarragona 2011</p>
-  </div>
+	</div>
 </footer>
 
 </body>
