--- a/adopta.html
+++ b/adopta.html
@@ -48,13 +48,13 @@
 
 	      <a href="index.html"><div id="text-logo" class="navbar-brand">laprotectora.org</div></a>
 
-	       <button type="button" onclick="location.href='index.html'" class="navbar-toggle collapsed">
+	       <button type="button" onclick="location.href='index.html'" class="navbar-toggle collapsed btn" id="navbar-flag">
 	       	<img class="flag" src="images/Flag-Icon-Catalonia.png">
 	       </button>
-	       <button type="button" onclick="location.href='index-es.html'" class="navbar-toggle collapsed">
+	       <button type="button" onclick="location.href='index-es.html'" class="navbar-toggle collapsed btn" id="navbar-flag">
 	       	<img class="flag" src="images/Flag-Icon-Spain.png">
 	       </button>
-	       <button type="button" onclick="location.href='index-en.html'" class="navbar-toggle collapsed">
+	       <button type="button" onclick="location.href='index-en.html'" class="navbar-toggle collapsed btn" id="navbar-flag">
 	       	<img class="flag" src="images/Flag-Icon-United-KingdomGreat-Britain.png">
 	       </button>
 	    </div>
@@ -167,8 +167,8 @@
 			    <h2>Dades de contacte:</h2>
 			    <ul class="list-unstyled">
 			      <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58" rel="external"><img class="icon" src="images/Google-Maps-icon.png">On som?</a></li>
-			      <li><a href="https://www.facebook.com/protectoratarragona/" rel="external"><img class="icon" src="images/Facebook.png">Facebook</a></li>
-			      <li><a href="mailto:laprotectora@gmail.com" rel="external"><img class="icon" src="images/Gmail-icon.png">Correu Electronic</a></li>
+			      <li><a href="https://www.facebook.com/protectoratarragona/" rel="external"><img class="icon" src="images/Facebook.png">facebook</a></li>
+			      <li><a href="mailto:laprotectora@gmail.com" rel="external"><img class="icon" src="images/Gmail-icon.png">Correu electrònic</a></li>
 			      <li><a href="tel:653 073 713" rel="external"><img class="icon" src="images/phone.png">(+34) 653 073 713</a></li>
 			      <li><a href="https://www.teaming.net/teamingdelaprotectoradetarragona" rel="external"><img class="icon" src="images/logo_teaming_heart.png">Teaming.net</a></li>
 			      <li>
@@ -181,7 +181,7 @@
 						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
 								<input type="hidden" name="cmd" value="_s-xclick">
 								<input type="hidden" name="hosted_button_id" value="Y9L68BC39DRQL">
-								<button type="submit" form="paypal" value="submit" class="blog-sidebar">
+								<button type="submit" form="paypal" value="submit" class="btn blog-sidebar">
 								<img src="images/Paypal.png" class="icon" border="0" alt="PayPal">
 								PayPal
 								</button>
@@ -215,14 +215,12 @@
 
 			<div class="sidebar-module sidebar-module-inset facebook-post">
 				<article>
-					<!-- <img src="images/facebook-banner-1.png" width="300px"> -->
 					<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fprotectoratarragona%2Fposts%2F10154387264756334%3A0&width=500" width="250" height="447" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</article>
 			</div>
 
 			<div class="sidebar-module sidebar-module-inset facebook-post">
 				<article>
-					<!-- <img src="images/facebook-banner-2.png" width="300px"> -->
 					<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fprotectoratarragona%2Fposts%2F10154299468986334&width=500" width="250" height="709" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 				</article>
 			</div>
