Youtube video fixed x-frame warning

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 			<br>
 			<div class="video-container">
-				<iframe src="https://youtu.be/IczMNuDXGQ8" frameborder="0" allowfullscreen></iframe>
+				<iframe src="https://www.youtube.com/embed/IczMNuDXGQ8" frameborder="0" allowfullscreen></iframe>
 			</div>
 
     </div><!-- /.blog-main -->
