New page voluntaris.html and links

--- a/adopta.html
+++ b/adopta.html
@@ -62,7 +62,7 @@
 	      <ul class="nav navbar-nav">
 	        <li><a href="adopta.html">Adopta!</a></li>
 	        <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58">On som?</a></li>
-	        <li><a href="">Voluntaris</a></li>
+	        <li><a href="voluntaris.html">Ajuda</a></li>
 					<li>
 						<a rel="external">
 						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
