--- a/voluntaris.html
+++ b/voluntaris.html
@@ -62,7 +62,7 @@
 	      <ul class="nav navbar-nav">
 	        <li><a href="adopta.html">Adopta!</a></li>
 	        <li><a href="https://www.google.ie/maps/place/Protectora+de+Animales+de+Tarragona/@41.1339485,1.2096351,14z/data=!4m5!1m2!2m1!1sProtectora+de+Animales+de+Tarragona!3m1!1s0x0000000000000000:0x6f30bac6f9813d58">On som?</a></li>
-	        <li><a href="">Ajuda</a></li>
+	        <li><a href="voluntaris.html">Ajuda</a></li>
 					<li>
 						<a rel="external">
 						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal">
@@ -87,11 +87,10 @@
 
 
 <div class="container">
-
       <div class="blog-header">
         <h1 class="blog-title"></h1>
         <p class="lead blog-description"><br></p>
-      </div>
+			</div>
 
 	<div class="row">
 
@@ -100,29 +99,43 @@
 			<div class="blog-post expanded-article">
 			  <h1 class="blog-post-title">Socis</h1>
 			  <p><strong>Si vols ajudar-nos a millorar, pots fer-te soci de la Protectora.</strong> Gràcies als donatius dels nostres socis podem realitzar el manteniment de les nostres instal·lacions i, a més a més, millorar la salut dels animals a través de revisions periòdiques, vacunacions, desparassitació, etc.
-Per a fer-te soci només cal omplir aquesta sol·licitud i fer-nos-la arribar a les nostres instal·lacions, o bé omple aquest formulari i ens l'envies..</p>
+				Per a fer-te soci només cal omplir <a href="documents/NOU-SOCI.pdf" rel="external">aquesta sol·licitud </a>i fer-nos-la arribar a les nostres instal·lacions, o bé omple aquest formulari i ens l'envies..</p>
+
+				<a href="documents/NOU-SOCI.pdf" rel="external">
+					<img src="images/pdf.png" class="img-responsive expanded-article center-block" alt="formulari voluntaris" width="150px">
+				</a>
+
 			  <h1 class="blog-post-title">Voluntariat</h1>
 			  <p><strong>En primer lloc, volem agrair a tots els voluntaris de la Protectora la seva dedicació i esforç per a fer més agradable la vida de tots els animals que tenim a les nostres instal·lacions.</strong>
-Sabem que vosaltres sou el veritable motor de la Protectora i sense la vostra ajuda no seria possible realitzar molts dels serveis que realitzem a l’actualitat per tal de millorar la qualitat de vida dels animals.</p>
+				Sabem que vosaltres sou el veritable motor de la Protectora i sense la vostra ajuda no seria possible realitzar molts dels serveis que realitzem a l’actualitat per tal de millorar la qualitat de vida dels animals.</p>
 			  <p>Ser voluntari és molt fàcil, només demanem que siguis major d'edat, que t’agradin els animals i que et comprometis a ajudar-nos el/s dia/es de la setmana que decideixis. És molt important entendre que fer de voluntari no és venir els dies que hem vingui de gust a passejar algún gos, sinó que és important poder comptar amb tú tant si plou com si fa sol, ja que els gossos necessiten la nostra ajuda tots els dies de l'any.
-Les feines que duen a terme el voluntariat són molt diverses: Cuidar els cadells i fer el seguiment de la vacunació. Ajudar en la neteja de les gàbies. Cuidar dels gats i alimentar els petits. Neteja de les casetes. Banyar, respatllar i tallar el pèl d’algun gos. 
-I, sobretot, donar-los molt d’amor!</p>
-			 
-			  <h1 class="blog-post-title">Donatius</h1>
-			  <p>Per una altra banda, si ens vols ajudar mitjançant donatius de material, els principals articles que utilitzem són els següents:</p>
-			  <p>Pinso: mitjançant aportacions personals.</p>
-			  <p>Veterinari: per a les cures el que més s'utilitza són les gasses, “betadine”, guants de làtex, estisores, pipetes, collarets antipuces, xeringues i vacunes...</p>
-              <p>Neteja: no cal dir que gastem força lleixiu, rentavaixelles, sabó, bosses de brossa, escombres, fregones, galledes...</p>
-              <p>Roba: durant l’hivern utilitzem tot tipus de roba vella o mantes per a les casetes dels gats i dels gossos.</p>
-              <p>Altres: hi ha moltes coses que podem utilitzar, collarets i corretges de gos, rotllos de paper, joguines per als gats, casetes...</p>
-              <p>I per últim ajuda'ns en la nostra tasca de difusió, pots participar en les fires a les que assistim o simplement donar a conèixer la necessitat d'adoptar gossos i gats a les protectores ja que, malauradement, cada cop estàn més plenes d'animals abandonats. </p>
-				<img src="images/StJordi17.jpg" class="img-responsive expanded-article" alt="got petit trist en gavia" width="400px">
+				Les feines que duen a terme el voluntariat són molt diverses: Cuidar els cadells i fer el seguiment de la vacunació. Ajudar en la neteja de les gàbies. Cuidar dels gats i alimentar els petits. Neteja de les casetes. Banyar, respatllar i tallar el pèl d’algun gos.
+				I, sobretot, donar-los molt d’amor!</p>
 
-				<br><br>
+				<a rel="external">
+					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="paypal" border="0">
+						<input type="hidden" name="cmd" value="_s-xclick">
+						<input type="hidden" name="hosted_button_id" value="Y9L68BC39DRQL">
+						<button type="submit" form="paypal" value="submit" class="center-block">
+							<img src="images/paypal-logo-300x300.png" alt="PayPal" width="100px" class="img-responsive">
+						</button>
+				</form>
+				</a>
+
+				<h1 class="blog-post-title">Donatius</h1>
+				<p>Per una altra banda, si ens vols ajudar mitjançant donatius de material, els principals articles que utilitzem són els següents:</p>
+				<p>Pinso: mitjançant aportacions personals.</p>
+				<p>Veterinari: per a les cures el que més s'utilitza són les gasses, “betadine”, guants de làtex, estisores, pipetes, collarets antipuces, xeringues i vacunes...</p>
+				<p>Neteja: no cal dir que gastem força lleixiu, rentavaixelles, sabó, bosses de brossa, escombres, fregones, galledes...</p>
+				<p>Roba: durant l’hivern utilitzem tot tipus de roba vella o mantes per a les casetes dels gats i dels gossos.</p>
+				<p>Altres: hi ha moltes coses que podem utilitzar, collarets i corretges de gos, rotllos de paper, joguines per als gats, casetes...</p>
+				<p>I per últim ajuda'ns en la nostra tasca de difusió, pots participar en les fires a les que assistim o simplement donar a conèixer la necessitat d'adoptar gossos i gats a les protectores ja que, malauradement, cada cop estàn més plenes d'animals abandonats. </p>
+
+				<img src="images/StJordi17.jpg" class="img-responsive expanded-article" alt="voluntaris durant una fira" width="800px">
 
 			</div><!-- /.blog-post -->
+		</div><!-- /.blog-main -->
 
-    </div><!-- /.blog-main -->
 
 	  <!-- Modal (Popup for bank transfer donation -->
 	  <div class="modal fade" id="bank-transfer" role="dialog">
